@@ -5,7 +5,6 @@ import com.su.mall.security.config.IgnoreUrlsConfig;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpMethod;
-import org.springframework.security.access.ConfigAttribute;
 import org.springframework.security.authorization.AuthorizationDecision;
 import org.springframework.security.authorization.AuthorizationManager;
 import org.springframework.security.core.Authentication;
@@ -19,55 +18,43 @@ import java.util.List;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
-/**
- * 动态鉴权管理器，用于判断是否有资源的访问权限
- * @author Su
- */
 @RequiredArgsConstructor
 public class DynamicAuthorizationManager implements AuthorizationManager<RequestAuthorizationContext> {
 
     private final DynamicSecurityMetadataSource securityDataSource;
     private final IgnoreUrlsConfig ignoreUrlsConfig;
 
-    @Override
-    public void verify(Supplier<Authentication> authentication, RequestAuthorizationContext object) {
-        AuthorizationManager.super.verify(authentication, object);
-    }
-
+    @SuppressWarnings("deprecation")
     @Override
     public AuthorizationDecision check(Supplier<Authentication> authentication, RequestAuthorizationContext requestAuthorizationContext) {
         HttpServletRequest request = requestAuthorizationContext.getRequest();
         String path = request.getRequestURI();
         PathMatcher pathMatcher = new AntPathMatcher();
-        //白名单路径直接放行
         List<String> ignoreUrls = ignoreUrlsConfig.getUrls();
         for (String ignoreUrl : ignoreUrls) {
             if (pathMatcher.match(ignoreUrl, path)) {
                 return new AuthorizationDecision(true);
             }
         }
-        //对应跨域的预检请求直接放行
-        if(request.getMethod().equals(HttpMethod.OPTIONS.name())){
+        if (request.getMethod().equals(HttpMethod.OPTIONS.name())) {
             return new AuthorizationDecision(true);
         }
-        //权限校验逻辑
-        List<ConfigAttribute> configAttributeList = securityDataSource.getConfigAttributesWithPath(path);
+        List<CustomConfigAttribute> configAttributeList = securityDataSource.getConfigAttributesWithPath(path);
         List<String> needAuthorities = configAttributeList.stream()
-                .map(ConfigAttribute::getAttribute)
-                .collect(Collectors.toList());
+                .map(CustomConfigAttribute::attribute)
+                .toList();
         Authentication currentAuth = authentication.get();
-        //判定是否已经实现登录认证
-        if(currentAuth.isAuthenticated()){
+        if (currentAuth.isAuthenticated()) {
             Collection<? extends GrantedAuthority> grantedAuthorities = currentAuth.getAuthorities();
             List<? extends GrantedAuthority> hasAuth = grantedAuthorities.stream()
                     .filter(item -> needAuthorities.contains(item.getAuthority()))
                     .collect(Collectors.toList());
-            if(CollUtil.isNotEmpty(hasAuth)){
+            if (CollUtil.isNotEmpty(hasAuth)) {
                 return new AuthorizationDecision(true);
-            }else{
+            } else {
                 return new AuthorizationDecision(false);
             }
-        }else{
+        } else {
             return new AuthorizationDecision(false);
         }
     }
